--- a/src/main/resources/templates/home/welcome.html
+++ b/src/main/resources/templates/home/welcome.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+
+    </style>
 </head>
 <body>
-<h1>Java Azurewebsites by Elena</h1><br/>
-<a  th:href="@{welcome}">***---> </a>
+<h1 style="text-align: center">Welcome to Java </h1><br/>
+<a  th:href="@{/}"><---*** </a>
 </body>
 </html>
